fix alignment

--- a/src/blocks/image-maxi/editor.scss
+++ b/src/blocks/image-maxi/editor.scss
@@ -22,8 +22,6 @@
 	&__resizer {
 		height: inherit !important;
 		max-height: 100%;
-		display: flex;
-		flex-direction: column;
 	}
 
 	&__settings {
